added merged code and fixes (site-2013-08-23.zip)

--- a/css-sass/view/_overview.scss
+++ b/css-sass/view/_overview.scss
@@ -266,6 +266,11 @@
 		font-weight: bold;
 	}
 
+	.section-bullet {
+		width: 85px;
+		float: right;
+	}
+
 	/* desktop & tablet */
 	@media (min-width:($mq-phone + 1px)) {
 		.page-section-comment {
