--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -50,13 +50,12 @@
         float: right;
 
         height: $statusHeight;
-        line-height: $statusHeight;
-        padding: 0 10px;
-        margin: (($headerHeight - $statusHeight) / 2) 10px 0 0;
-        min-width: 190px;
-        height: 46px;
+        margin: 9px 10px 0 0;
+        width: 254px;
+        height: 57px;
         background-color:transparent;
         background-size:contain;
+        background-repeat: no-repeat;
 
         &.good {
             background-image:url(../images/test/base/good-flag.png);
@@ -107,8 +106,9 @@
         }
 
         .status {
-            margin: (($headerHeight - $statusHeight) / 2) 57px 0 0;
-            min-width: 31px;
+            margin: 3px 58px 0 0;
+            width: 50px;
+            height: 50px;
 
             .text {
                 display: none;
@@ -134,36 +134,4 @@
             }
         }
     }
-}
-
-@media (min-width:($mq-phone)) and (max-width:($mq-tablet)) {
-	.view-subtest-boolean .label {
-		font-size:130%!important;
-	}
-}
-
-.bracket-padding {
-	display:none;
-}
-
-@media (min-width:($mq-tablet)) {
-	.bracket {
-		max-height:600px!important;
-		img {
-			max-height:600px!important;
-			width:33px!important;
-            min-height:600px;
-		}
-	}
-
-	.bracket-padding {
-		display:block;
-		height:2px;
-        min-height:600px;
-		width:100%;
-	}
-}
-
-.view-subtest-boolean .value.good .text {
-	padding-left:0!important;
 }
