subtest/Select: implemented basic logic

--- a/css-sass/screen.scss
+++ b/css-sass/screen.scss
@@ -60,6 +60,7 @@ $mq-phone: 480px;
 @import "view/subtest/range";
 @import "view/subtest/range-group";
 @import "view/subtest/cbc-summary";
+@import "view/subtest/select";
 @import "view/subtest/types-of-cell";
 @import "view/subtest/pod/base";
 @import "view/subtest/pod/select";
