--- a/css-sass/view/subtest/pod/_base.scss
+++ b/css-sass/view/subtest/pod/_base.scss
@@ -13,6 +13,7 @@
 		font-size: 123.1%;
 		text-transform: uppercase;
 		font-weight: bold;
+		text-align: center;
 
 		padding-bottom: 5px;
 		border-bottom: 1px solid #6b6b6b;
