--- a/css/screen.css
+++ b/css/screen.css
@@ -3575,24 +3575,24 @@ span.placeholder {
   }
 }
 .view-subtest-boolean .value.good .icon {
-  background-image: url("../images/subtest/boolean/result-good.png");
+  background-image: url("../images/common/result-good.png");
   left: 8px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
   .view-subtest-boolean .value.good .icon {
-    background-image: url("../images/subtest/boolean/result-good-2x.png");
+    background-image: url("../images/common/result-good-2x.png");
   }
 }
 .view-subtest-boolean .value.good .text {
   padding-left: 10%;
 }
 .view-subtest-boolean .value.bad .icon {
-  background-image: url("../images/subtest/boolean/result-bad.png");
+  background-image: url("../images/common/result-bad.png");
   right: 7px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
   .view-subtest-boolean .value.bad .icon {
-    background-image: url("../images/subtest/boolean/result-bad-2x.png");
+    background-image: url("../images/common/result-bad-2x.png");
   }
 }
 .view-subtest-boolean .value.bad .text {
@@ -4093,6 +4093,60 @@ span.placeholder {
   }
 }
 
+.view-subtest-select .options {
+  padding: 0;
+}
+.view-subtest-select .option {
+  font-size: 108%;
+  list-style: none;
+  color: #6b6b6b;
+  background-image: url(../images/subtest/select/bg-middle.png);
+  background-repeat: repeat-y;
+}
+.view-subtest-select .option:first-child {
+  background-image: url(../images/subtest/select/bg-top.png);
+  background-position: left top;
+}
+.view-subtest-select .option:first-child .token {
+  top: 3px;
+}
+.view-subtest-select .option.last {
+  background-image: url(../images/subtest/select/bg-bottom.png);
+  background-position: left bottom;
+}
+.view-subtest-select .option.last .token {
+  top: -3px;
+}
+.view-subtest-select .option.selected {
+  font-size: 210%;
+  font-weight: bold;
+}
+.view-subtest-select .option.selected .token {
+  background-image: url(../images/common/result-good.png);
+  background-repeat: no-repeat;
+  background-position: 7px center;
+  position: relative;
+}
+.view-subtest-select .option.selected.bad .token {
+  background-image: url(../images/common/result-bad.png);
+}
+.view-subtest-select .option.selected .name {
+  background-image: url(../images/common/attribute-list-bullet.png);
+  background-repeat: no-repeat;
+  background-position: 7px center;
+}
+.view-subtest-select .option .token {
+  padding-left: 45px;
+}
+.view-subtest-select .option .name {
+  padding-left: 20px;
+  height: 40px;
+  line-height: 40px;
+}
+.view-subtest-select .description {
+  display: none;
+}
+
 .view-subtest-types-of-cell .option {
   font-family: 'Apercu', sans-serif;
   border: 2px solid #f0f0f0;
@@ -4439,35 +4493,13 @@ span.placeholder {
   font-size: 123.1%;
   text-transform: uppercase;
   font-weight: bold;
+  text-align: center;
   padding-bottom: 5px;
   border-bottom: 1px solid #6b6b6b;
 }
 
-.view-subtest-pod-select .options {
-  padding: 0;
-}
-.view-subtest-pod-select .option {
-  height: 40px;
-  font-size: 108%;
-  list-style: none;
-  color: #6b6b6b;
-  background-image: url(../images/subtest/pod/select/bg-middle.png);
-  background-repeat: repeat-y;
-}
-.view-subtest-pod-select .option:first-child {
-  background-image: url(../images/subtest/pod/select/bg-top.png);
-  background-position: left top;
-}
-.view-subtest-pod-select .option.last {
-  background-image: url(../images/subtest/pod/select/bg-bottom.png);
-  background-position: left bottom;
-}
-.view-subtest-pod-select .option.selected {
-  font-size: 210%;
-  font-weight: bold;
-}
-.view-subtest-pod-select .description {
-  display: none;
+.view-subtest-pod-select {
+  margin-left: 10px;
 }
 
 .view-widget-test-overview .section-heading .column {
