view/MainMenu: refactored main menu so that it now lives inside the framework..

--- a/js/template/Page.html
+++ b/js/template/Page.html
@@ -1,4 +1,6 @@
 <div class="page">
+    <!-- main menu -->
+    <div class="page-mainmenu"></div>
 
     <!-- report content -->
     <div class="page-content">
