--- a/css-sass/screen.scss
+++ b/css-sass/screen.scss
@@ -41,6 +41,7 @@ $mq-phone: 480px;
 // report
 @import "view/page";
 @import "view/report";
+@import "view/mainmenu";
 @import "view/navigation";
 @import "view/overview";
 
