fixed body background/text color

--- a/css/screen.css
+++ b/css/screen.css
@@ -1443,7 +1443,8 @@ tt {
 }
 
 body {
-  color: #e8eae5;
+  color: #797979;
+  background-color: #e8eae5;
   font-family: 'adelle_light', serif;
 }
 
