--- a/js/template/Overview.html
+++ b/js/template/Overview.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 
-	<!-- comments summary -->
+	<!-- tests ran summary -->
 	<div class="yui3-g-r page-section page-section-ran">
 		<div class="yui3-u-1-8 yui3-u-1-12-small-tablet yui3-hidden-phone"></div>
 
@@ -126,11 +126,13 @@
 	</div>
 
 	<!-- explore tests -->
-	<div class="yui3-g-r page-section">
+	<div class="yui3-g-r page-section page-section-explore-tests">
 		<div class="yui3-u-1">
-			<div class="yui3-u-c explore-tests">
+			<div class="yui3-u-c">
 				<h1>Learn more about the tests with {{patient.name}}’s results below.</h1>
 			</div>
 		</div>
 	</div>
+
+	<div class="section-break"></div>
 </div>
