--- a/css-sass/_base.scss
+++ b/css-sass/_base.scss
@@ -24,6 +24,13 @@
     }
 }
 
+@mixin primaryContent {
+    background-color: white;
+}
+@mixin secondaryContent {
+    background-color: #f7f8f6;
+}
+
 * {
     /**
      * Disable highlighting elements when tapping screen.
