tests: added section break to all tests

--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -1,7 +1,6 @@
 .view-test-base {
-    >.content {
-        padding-bottom: 30px;
-        
+
+    >.body {
         &.collapsed {
             display: none;
         }
