--- a/js/template/test/Base.html
+++ b/js/template/test/Base.html
@@ -4,5 +4,8 @@
     <div class="header-container"></div>
 
     <!-- test results -->
-    <div class="content"></div>
+    <div class="body">
+    	<div class="content"></div>
+		<div class="section-break"></div>
+    </div>
 </div>
