--- a/js/template/Overview.html
+++ b/js/template/Overview.html
@@ -104,6 +104,8 @@
 				</div>
 			</div>
 
+			<div class="yui3-u-1-24 yui3-hidden-phone"></div>
+
 			<div class="yui3-u-1-4">
 				<div class="yui3-u-c">
 					<h2 class="yui3-hidden-phone">Contact Us</h2>
