view/test: updated test heading colors

--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -116,9 +116,9 @@
     }
 }
 
-@mixin view-test-base-extend ($type) {
+@mixin view-test-base-extend ($type, $bgColor) {
     .test-header.#{$type} {
-        background-image: url("../images/test/#{$type}/heading-bg.png");
+        background-color: $bgColor;
 
         .title {
             .icon {
