--- a/css-sass/view/test/_chemistry.scss
+++ b/css-sass/view/test/_chemistry.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(chemistry);
+@include view-test-base-extend(chemistry, #1948a2);
 
 .view-test-chemistry {
     .subtest-container {
