--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(urine);
+@include view-test-base-extend(urine, #674e9f);
 
 .view-test-urine-analysis {
     .test-description {
