--- a/css-sass/view/test/_cbc.scss
+++ b/css-sass/view/test/_cbc.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(cbc, #34a778);
+@include view-test-base-extend(cbc, #34a778, #30bd84);
 
 .view-test-cbc {
     .subsection {
