--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -5,8 +5,7 @@
         <div class="yui3-u-1-2">
             <div class="yui3-u-c column">
                 <div class="inner">
-                    <h1>{{renderTemplate heading}}</h1>
-                    <p>{{renderTemplate text}}</p>
+                    <p>{{description}}</p>
                 </div>
             </div>
         </div>
