--- a/js/template/test/Base.html
+++ b/js/template/test/Base.html
@@ -5,6 +5,7 @@
 
     <!-- test results -->
     <div class="body">
+    	<div class="overview"></div>
     	<div class="content"></div>
 		<div class="section-break"></div>
     </div>
