--- a/js/template/subtest/RangeGroup.html
+++ b/js/template/subtest/RangeGroup.html
@@ -1,8 +1,8 @@
 <div class="view-subtest-range-group">
 
-    <div class="yui3-g yui3-visible-phone">
+    <div class="yui3-g">
         <div class="yui3-u-1">
-            <div class="yui3-u-c legend top">
+            <div class="yui3-u-c legend">
                 <span class="symbol"></span>
                 <span class="label">Expected Range</span>
             </div>
@@ -26,11 +26,6 @@
                     </div>
 
                     <div class="pager next"><div class="button"></div></div>
-                </div>
-
-                <div class="legend bottom yui3-hidden-phone">
-                    <span class="symbol"></span>
-                    <span class="label">Expected Range</span>
                 </div>
 
                 <div class="swipe"></div>
