--- a/js/template/test/SuperChemistry.html
+++ b/js/template/test/SuperChemistry.html
@@ -1,6 +1,6 @@
 <div class="view-test-chemistry">
     
-    <div class="yui3-g-r page-section">
+    <div class="yui3-g-r page-section test-section">
         <!-- test -->
         <div class="yui3-u-1">
             <div class="subtest-container"></div>
