--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -5,13 +5,13 @@
         <div class="yui3-u-1-2">
             <div class="yui3-u-c column">
                 <div class="inner">
-                    <p>{{description}}</p>
+                    <div class="description">{{description}}</div>
                 </div>
             </div>
         </div>
 
         <!-- diagram -->
-        <div class="yui3-u-1-2 yui3-hidden-phone">
+        <div class="yui3-u-1-2">
             <div class="yui3-u-c diagram-container">
                 <div class="inner">
                     <img class="diagram" src="images/test/{{type}}/diagram.png" />
