test/FelvFiv: updated design

--- a/css-sass/view/subtest/_select.scss
+++ b/css-sass/view/subtest/_select.scss
@@ -33,6 +33,7 @@
 		&.selected {
             font-size: 210%;
             font-weight: bold;
+            color: #333;
 
             .token {
             	background-image: url(../images/common/result-good.png);
