--- a/js/template/test/FelvFiv.html
+++ b/js/template/test/FelvFiv.html
@@ -1,6 +1,6 @@
 <div class="view-test-fiv">
     
-    <div class="yui3-g-r page-section">
+    <div class="yui3-g-r page-section test-section">
         <!-- tests -->
         <div class="yui3-u-1-2 yui3-u-1-small-tablet">
             <div class="yui3-g">
